--- a/Comidas.css
+++ b/Comidas.css
@@ -80,7 +80,7 @@
       }
       #nav-bar {
         display: block;
-        height: 16.1vh;
+        height: 14.1vh;
       }
       #nav-bar>.menu-imagen {
         display: grid;
@@ -264,22 +264,19 @@
       padding: 5px;
       margin: 5px;
       text-align: start;
+      color: #5f5c5c;
     }
     .column1R h1 {
       text-align: center;
+      font-family: Arial,Helvetica,sans-serif;
+      font-size: 45px;
+      margin-top: 18px;
+      margin: -2px;
     }
-    .column2L {
-      width: auto;
-      height: 52vh;
-      position: sticky;
-      top: 104px;
-      bottom: -19px;
+    .LargeText h1 {
+      width: 65vh;
     }
-    .column2L img {
-      width: 9vh;
-      height: 9vh;
-      margin: 8px;
-    }
+  
     .icons a{
       width: 55vh;
       height: 20vh;
@@ -301,12 +298,12 @@
     display: none;
   }
 @media (max-width:956px) {
-  .column2L {
-    width: auto;
-    height: 52vh;
-    position: sticky;
-    top: 104px;
-    bottom: -19px;
-    display: none;
-  }
+}
+.borderText {
+  width: 10vh;
+  height: 10vh;
+  border-bottom: 10px solid rgb(28, 142, 218);
+  position: relative;
+  margin: 15px;
+  margin-bottom:15px;
 }
