--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
         }
         #nav-bar {
           display: block;
-          height: 16.1vh;
+          height: 14.1vh;
         }
         #nav-bar>.menu-imagen {
           display: grid;
@@ -483,6 +483,15 @@
   height: 20vh;
   mix-blend-mode: darken;
 }
+.elementsContainer .button:hover {
+   width: 270px;
+   height: 40px;
+  background: rgb(29, 150, 231);
+  transition: 0.5s;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
 .elementsContainer .button {
     width: 250px;
     height: 38px;
@@ -491,6 +500,7 @@
     outline: none;
     border: none;
     color: black;
+    transition: 0.5s;
 }
 .text { 
   display: flex;
