--- a/Comidas.css
+++ b/Comidas.css
@@ -276,7 +276,18 @@
     .LargeText h1 {
       width: 70vh;
     }
-  
+    @media (max-width:560px) {
+    .LargeText h1 {
+      width: 44vh;
+  }
+  .column1R h1 {
+      text-align: center;
+      font-family: Arial,Helvetica,sans-serif;
+      font-size: 33px;
+      margin-top: 18px;
+      margin: -2px;
+  }
+}
     .icons a{
       width: 55vh;
       height: 20vh;
