--- a/style.css
+++ b/style.css
@@ -499,7 +499,7 @@
       text-decoration: none;
     }
   }
-  /* Comidas, bebidas, religion etc */
+  /* Comida, bebidas, religion etc */
 .containerFood {
   width: 100%;
   display: flex;
