--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     .menuScroll .imagen {
        display: block;
        transition: 0.5s;
-       min-width: 21vh;
+       min-width: 23vh;
        width: 10vh;
     }
     .menu-imagen {
@@ -99,7 +99,7 @@
       }
         #nav-bar {
           display: block;
-          height: 16.1vh;
+          height: 14.1vh;
         }
         #nav-bar>.menu-imagen {
           display: grid;
@@ -118,7 +118,7 @@
         .imagenes {
           display: flex;
           justify-content: space-around;
-          align-items: start;
+          align-items: center;
         }
         .menu {
           display: flex;
@@ -263,9 +263,9 @@
       }
       .container-Text img {
         display: flex;
-        flex-basis: 15vh;
-        height: 25vh;
-      }
+        flex-basis: 4vh;
+        height: 18vh;
+    }
     }
     /* Fondo inicio/ Final */
     /* sdasdasd */
@@ -565,24 +565,14 @@
 }
 footer {
   width: 100%;
-  height: 40vh;
+  height: auto;
   background-color: var(--Color-grey-logo);
-}
-.footerContainer {
-  width: 100%;
-  height: 40vh;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  flex: 1 1 100%;
   justify-content: center;
+  align-items: center;
+  flex-flow: row;
   flex-wrap: wrap;
-}
-@media (max-width:895px) {
-  footer {
-    height: 65vh;
-  }
-}
-@media (max-width:500px) {
-  footer {
-    height: 70vh;
-  }
+  text-align: start;
 }
