--- a/Puntarenas.css
+++ b/Puntarenas.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: 'Open Sans', sans-serif;
 }
   /* Inicio menu */
   body {
