--- a/Comidas.css
+++ b/Comidas.css
@@ -267,48 +267,63 @@
   /* ************************************************************************************************************************************
   **************************************************************************************************************************************** */
   /* Columnas */
-    .InfoGeneral {
-     width: 100%;
-     height: 150vh;
+  .InfoGeneral {
+    width: 100%;
+    height: auto;
+    display: flex;
+ }
+   .column1R {
+     width: auto;
+     height: auto;
      display: flex;
-  }
-    .column1R {
-      width: auto;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-      flex: 1 1 100%;
-      position: relative;
-    }
-    .column1R p {
-      padding: 5px;
-      margin: 5px;
-      text-align: start;
-      color: #5f5c5c;
-    }
-    .column1R h1 {
-      text-align: start;
-      font-size: 35px;
-      margin-top: 18px;
-      margin: 4px;
-      border-bottom: 5px solid var(--Color-yellow-logo);
-    }
-    .LargeText h1 {
-      width: 55vh;
-    }
-  @media (max-width:560px) {
-    .LargeText h1 {
-      width: 55vh;
-  }
-  .column1R h1 {
-      text-align: center;
-      font-family: Arial,Helvetica,sans-serif;
-      font-size: 33px;
-      margin-top: 18px;
-      margin: -2px;
+     flex-direction: column;
+     flex: 1 1 100%;
+     margin: 3px;
+     padding: 1px;
+     position: relative;
+     margin-left: 169px;
+     margin-right: 223px;
+     font-size: 20px;
+   }
+   .column1R p {
+     padding: 5px;
+     margin: 5px;
+     text-align: justify;
+     color: #000000;
+   }
+   .column1R h1 {
+     text-align: justify;
+     font-size: 35px;
+     margin-top: 18px;
+     margin: 4px;
+     color: #5f5c5c;
+   }
+   .column1R h4 {
+     text-align: start;
+     margin-top: 18px;
+     margin: 10px;
+   }
+   .LargeText h1 {
+     width: 55vh;
+   }
+ @media (max-width:670px) {
+   .LargeText h1 {
+     width: 55vh;
+ }
+ .column1R {
+   margin: 0;
+   margin-left: 25px;
+   margin-right: 25px;
+ }
+ .column1R h1 {
+     text-align: center;
+     font-family: Arial,Helvetica,sans-serif;
+     font-size: 33px;
+     margin-top: 18px;
+     margin: -2px;
 
-  }
-}
+ }
+ }  
     .icons a{
       width: 55vh;
       height: 20vh;
@@ -328,4 +343,18 @@
 }
   .openButton {
     display: none;
+  }
+
+  footer {
+    width: 100%;
+    height: auto;
+    background-color: var(--Color-grey-logo);
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 100%;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row;
+    flex-wrap: wrap;
+    text-align: start;
   }
