--- a/Puntarenas.css
+++ b/Puntarenas.css
@@ -85,7 +85,7 @@
   a.links {
     text-decoration: none;
   }
-  @media (max-width:648px) {
+  @media (max-width:695px) {
     .menu-imagen {
         display: block;
         width: 5%;
@@ -270,7 +270,7 @@
   /* Columnas */
     .InfoGeneral {
      width: 100%;
-     height: 150vh;
+     height: auto;
      display: flex;
   }
     .column1R {
@@ -282,26 +282,40 @@
       margin: 3px;
       padding: 1px;
       position: relative;
+      margin-left: 169px;
+      margin-right: 223px;
+      font-size: 20px;
     }
     .column1R p {
       padding: 5px;
       margin: 5px;
-      text-align: start;
-      color: #5f5c5c;
+      text-align: justify;
+      color: #000000;
     }
     .column1R h1 {
-      text-align: start;
+      text-align: justify;
       font-size: 35px;
       margin-top: 18px;
       margin: 4px;
       border-bottom: 5px solid var(--Color-yellow-logo);
+      color: #5f5c5c;
+    }
+    .column1R h4 {
+      text-align: start;
+      margin-top: 18px;
+      margin: 10px;
     }
     .LargeText h1 {
       width: 55vh;
     }
-  @media (max-width:560px) {
+  @media (max-width:670px) {
     .LargeText h1 {
       width: 55vh;
+  }
+  .column1R {
+    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
   .column1R h1 {
       text-align: center;
@@ -332,3 +346,73 @@
   .openButton {
     display: none;
   }
+
+  footer {
+    width: 100%;
+    height: auto;
+    background-color: var(--Color-grey-logo);
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 100%;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row;
+    flex-wrap: wrap;
+    text-align: start;
+  }
+  .icons {
+    width: 45vh;
+    height: 15vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   }
+   .icon1 {
+        width: 6.5vh;
+        height: 2.5em;
+        background-image: url(instagram.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon1:hover {
+        background-image: url(instagram-hover.png);
+        transition: 0.5s;
+    }
+    .icon2 {
+        background-image: url(facebook.png); 
+        background-size: 41px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon2:hover {
+        background-image: url(facebook-hover.png);
+        transition: 0.5s;
+    }
+    .icon3 {
+        background-image: url(twitter.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .icon3:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .logoPureza {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .logoPureza:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
